--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 certifi==2025.7.14
 charset-normalizer==3.4.2
 idna==3.10
+numpy==1.24.4
+pandas==2.0.3
+py4j==0.10.9.7
+pyspark==3.5.6
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.4
+six==1.17.0
+tzdata==2025.2
 urllib3==2.2.3
