--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+annotated-types==0.7.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 idna==3.10
 numpy==1.24.4
 pandas==2.0.3
 py4j==0.10.9.7
+pydantic==2.10.6
+pydantic-core==2.27.2
+pydantic-settings==2.8.1
 pyspark==3.5.6
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.4
 six==1.17.0
+typing-extensions==4.13.2
 tzdata==2025.2
 urllib3==2.2.3
