--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.7.0
 msgspec==0.19.0
+numpy==2.3.3
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp==1.27.0
 opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -78,6 +79,7 @@ opentelemetry-proto==1.27.0
 opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 packaging==24.2
+pandas==2.3.2
 pathspec==0.12.1
 pendulum==3.1.0
 pluggy==1.6.0
@@ -85,8 +87,10 @@ prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 protobuf==4.25.8
 psutil==7.0.0
+pyarrow==21.0.0
 pycparser==2.22
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
